--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,82 +1,121 @@
 analyzer:
   errors:
+    todo: ignore
+    strict_raw_type: ignore
+    invalid_assignment: warning
+    invalid_null_aware_operator: warning
+    missing_required_param: error
+    missing_return: error
+    dead_code: info
     mixin_inherits_from_not_object: ignore
-  enable-experiment:
-    - extension-methods
-  strong-mode:
-    implicit-casts: false
+    not_map_spread: ignore
+    for_in_of_invalid_type: ignore
+    not_iterable_spread: ignore
+    unnecessary_parenthesis: warning
+    prefer_const_constructors: warning
+    unnecessary_const: warning
+    flutter_style_todos: warning
+    require_trailing_commas: warning
+    directives_ordering: warning
+    non_constant_identifier_names: warning
+    unrelated_type_equality_checks: warning
+    use_build_context_synchronously: warning
+    eol_at_end_of_file: warning
+    unnecessary_brace_in_string_interps: warning
+    unnecessary_import: warning
+    avoid_print: warning
+    depend_on_referenced_packages: warning
+    use_late_for_private_fields_and_variables: ignore
+
+  language:
+    strict-raw-types: true
+    strict-casts: true
+    strict-inference: true
+
   exclude:
     - .history/**
     - .idea/**
-    - test/**
+    - test/.test_coverage.dart
+    - build/**
+    - lib/generated_plugin_registrant.dart
+
 linter:
   rules:
+    # Errors
+    - avoid_empty_else
+    - avoid_print
+    - avoid_relative_lib_imports
+    - avoid_slow_async_io
+    - avoid_type_to_string
+    - avoid_types_as_parameter_names
+    - cancel_subscriptions
+    - close_sinks
+    - comment_references
+    - control_flow_in_finally
+    - empty_statements
+    - hash_and_equals
+    - collection_methods_unrelated_type
+    - literal_only_boolean_expressions
+    - no_adjacent_strings_in_list
+    - no_duplicate_case_values
+    - no_logic_in_create_state
+    - prefer_relative_imports
+    - prefer_void_to_null
+    - test_types_in_equals
+    - throw_in_finally
+    - unnecessary_statements
+    - unrelated_type_equality_checks
+    - unsafe_html
+    - use_build_context_synchronously
+    - use_key_in_widget_constructors
+    - valid_regexps
+
+    # Style
+    - require_trailing_commas
+    - flutter_style_todos
     - always_declare_return_types
-    - always_put_control_body_on_new_line
     - always_put_required_named_parameters_first
-    - always_require_non_null_named_parameters
     - always_specify_types
     - annotate_overrides
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catches_without_on_clauses
-    - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
-    - avoid_empty_else
-    - avoid_equals_and_hash_code_on_mutable_classes
     - avoid_field_initializers_in_const_classes
     - avoid_implementing_value_types
     - avoid_init_to_null
     - avoid_js_rounded_ints
     - avoid_null_checks_in_equality_operators
-    - avoid_print
     - avoid_private_typedef_functions
     - avoid_renaming_method_parameters
     - avoid_return_types_on_setters
-    - avoid_returning_null
-    - avoid_returning_null_for_future
     - avoid_returning_null_for_void
     - avoid_returning_this
     - avoid_setters_without_getters
     - avoid_shadowing_type_parameters
     - avoid_single_cascade_in_expression_statements
-    - avoid_slow_async_io
-    - avoid_types_as_parameter_names
     - avoid_unnecessary_containers
-    - avoid_unused_constructor_parameters
     - avoid_void_async
-    - avoid_web_libraries_in_flutter
     - await_only_futures
     - camel_case_types
-    - cancel_subscriptions
     - cascade_invocations
-    - close_sinks
-    - comment_references
-    - constant_identifier_names
-    - control_flow_in_finally
     - curly_braces_in_flow_control_structures
     - directives_ordering
     - empty_catches
     - empty_constructor_bodies
-    - empty_statements
     - file_names
-    - hash_and_equals
+    - eol_at_end_of_file
+    - use_test_throws_matchers
     - implementation_imports
-    - invariant_booleans
-    - iterable_contains_unrelated_type
     - join_return_with_assignment
     - library_names
     - library_prefixes
-    - list_remove_unrelated_type
-    - literal_only_boolean_expressions
-    - no_adjacent_strings_in_list
-    - no_duplicate_case_values
+    - lines_longer_than_80_chars
     - non_constant_identifier_names
     - null_closures
     - one_member_abstracts
     - only_throw_errors
     - overridden_fields
     - package_api_docs
-    - package_names
     - package_prefixed_library_names
     - parameter_assignments
     - prefer_adjacent_string_concatenation
@@ -106,20 +145,15 @@ linter:
     - prefer_is_not_operator
     - prefer_iterable_whereType
     - prefer_null_aware_operators
-    - prefer_relative_imports
     - prefer_single_quotes
     - prefer_spread_collections
     - prefer_typing_uninitialized_variables
-    - prefer_void_to_null
     - provide_deprecation_message
     - recursive_getters
     - slash_for_doc_comments
     - sort_child_properties_last
     - sort_constructors_first
-
     - sort_unnamed_constructors_first
-    - test_types_in_equals
-    - throw_in_finally
     - type_annotate_public_apis
     - type_init_formals
     - unawaited_futures
@@ -133,15 +167,105 @@ linter:
     - unnecessary_null_in_if_null_operators
     - unnecessary_overrides
     - unnecessary_parenthesis
-    - unnecessary_statements
     - unnecessary_this
-    - unrelated_type_equality_checks
-    - unsafe_html
+    - unnecessary_string_interpolations
+    - unnecessary_nullable_for_final_variable_declarations
+    - unnecessary_null_checks
+    - cast_nullable_to_non_nullable
     - use_full_hex_values_for_flutter_colors
     - use_function_type_syntax_for_parameters
     - use_rethrow_when_possible
     - use_setters_to_change_properties
     - use_string_buffers
     - use_to_and_as_if_applicable
-    - valid_regexps
     - void_checks
+    - prefer_const_constructors
+    - prefer_const_literals_to_create_immutables
+    - sized_box_for_whitespace
+    - unnecessary_to_list_in_spreads
+    - use_colored_box
+    - use_decorated_box
+
+    # Pub Rules
+    - depend_on_referenced_packages
+    - package_names
+    - sort_pub_dependencies
+
+dart_code_metrics:
+  anti-patterns:
+    # - long-method
+    - long-parameter-list
+  # metrics:
+  #   cyclomatic-complexity: 20
+  #   lines-of-code: 100
+  #   maintainability-index: 50
+  #   maximum-nesting-level: 5
+  #   number-of-methods: 10
+  #   number-of-parameters: 4
+  #   source-lines-of-code: 50
+  #   technical-debt:
+  #     threshold: 1
+  #     todo-cost: 161
+  #     ignore-cost: 320
+  #     ignore-for-file-cost: 396
+  #     as-dynamic-cost: 322
+  #     deprecated-annotations-cost: 37
+  #     file-nullsafety-migration-cost: 41
+  #     unit-type: "USD"
+  #   weight-of-class: 0.33
+
+  rules:
+    # Common
+    - avoid-collection-methods-with-unrelated-types:
+        strict: false
+
+    - avoid-duplicate-exports
+    - avoid-global-state
+    # - avoid-ignoring-return-values #debatir
+    # - avoid-late-keyword #debatir
+    # - avoid-missing-enum-constant-in-map #debatir
+    # - avoid-non-null-assertion #debatir Repository.instance.request
+    - avoid-passing-async-when-sync-expected
+    - avoid-redundant-async
+    # - avoid-throw-in-catch-block # importante para crashlytics
+    - avoid-unnecessary-conditionals
+    - avoid-unnecessary-type-assertions
+    - avoid-unnecessary-type-casts
+    - avoid-unrelated-type-assertions
+    - avoid-unused-parameters
+    - no-boolean-literal-compare
+    - no-empty-block
+    - no-equal-then-else
+    - no-object-declaration
+    - prefer-async-await
+    - prefer-conditional-expressions:
+        ignore-nested: true
+
+    - prefer-first
+    - prefer-immediate-return
+    - prefer-iterable-of
+    - prefer-last
+    - prefer-moving-to-variable:
+        allowed-duplicated-chains: 5
+    - prefer-trailing-comma:
+        break-on: 3
+
+
+    # Flutter
+    - always-remove-listener
+    # - avoid-border-all debatir
+    - avoid-expanded-as-spacer
+    - avoid-returning-widgets
+    - avoid-unnecessary-setstate
+    - avoid-wrapping-in-padding
+    - check-for-equals-in-render-object-setters
+    - consistent-update-render-object
+    - prefer-const-border-radius
+    - prefer-correct-edge-insets-constructor
+    - prefer-extracting-callbacks:
+        ignored-named-arguments:
+          - onPressed
+          - onSubmitted
+        allowed-line-count: 5
+    # - prefer-single-widget-per-file
+    # - use-setstate-synchronously bien
